# integrity-code-series-week10-nnph-scc

./: .gitignore  .zenodo.json  CHANGELOG.md  CITATION.cff  CONTRIBUTING.md  README.md  equations.html  pyproject.toml  requirements.txt  run_all.py
.github/: pull_request_template.md
.github/ISSUE_TEMPLATE/: bug_report.yml  feature_request.yml
.github/workflows/: ci.yml  release.yml
docs/: equations.html
paper/: paper.bib  paper.md
src/: audit_chain.py  bayesian_update.py  constants.py  cp_optimization.py  crack_colony.py  crack_growth.py  crack_tip_chemistry.py  fad_assessment.py  h2_blending.py  hydrogen_diffusion.py  inspection_optimizer.py  microstructure.py  model_uncertainty.py  monte_carlo.py  pod_ilicurve.py  pressure_spectrum.py  surrogate_gbr.py
tests/: test_physics_correctness.py  test_week10.py
validation/: benchmarks.py
visualization/: plot_advanced.py  plot_all.py
